--- a/cghousing/templates/coop/person_detail.html
+++ b/cghousing/templates/coop/person_detail.html
@@ -49,7 +49,7 @@
 
   <tr>
     <td class="label-cell">Committees</td>
-    <td>{{ member.formatted_committees }}</td>
+    <td>{{ member.formatted_committees | safe }}</td>
   </tr>
 
   <tr>
