--- a/cghousing/templates/coop/person_detail.html
+++ b/cghousing/templates/coop/person_detail.html
@@ -2,6 +2,7 @@
 
 {% load markdown_deux_tags %}
 {% load humanize %}
+{% load coop_extras %}
 
 {% block body_class %}class="person"{% endblock %}
 
@@ -38,7 +39,7 @@
 
   <tr>
     <td class="label-cell">Email</td>
-    <td>{{ member.email }}</td>
+    <td><a href="mailto:{{ member.email }}">{{ member.email }}</a></td>
   </tr>
 
   <tr>
@@ -48,7 +49,8 @@
 
   <tr>
     <td class="label-cell">Address</td>
-    <td>{{ member.address }}</td>
+    <td><a href="{% url 'coop:unit_by_block_unit_nos' member.unit.block_number|addstr:'-'|addstr:member.unit.unit_number %}"
+        >#{{ member.unit.unit_number}}, {{ member.unit.block_number }}</a></td>
   </tr>
 
   <tr>
@@ -56,10 +58,12 @@
     <td>{{ member.formatted_committees | safe }}</td>
   </tr>
 
+  {% if member.formatted_children %}
   <tr>
     <td class="label-cell">Children</td>
     <td>{{ member.formatted_children }}</td>
   </tr>
+  {% endif %}
 
 </table>
 
