--- a/cghousing/coop/static/coop/css/base.css
+++ b/cghousing/coop/static/coop/css/base.css
@@ -661,7 +661,7 @@ form.default-form li
   list-style-type: none;
 }
 
-form.default-form label
+form.default-form > ul > li > label
 {
   display: inline-block;
   width: 10em;
@@ -832,5 +832,15 @@ div.new-number-form-container ul li
 div.indent-block
 {
   padding-left: 2em;
+}
+
+#id_fulfillers,
+#id_shirkers,
+#id_excusees
+{
+  max-height: 10em;
+  overflow: scroll;
+  border: 1px solid #ccc;
+  padding: 0 1em;
 }
 
