--- a/cghousing/templates/coop/participation_requirement_new.html
+++ b/cghousing/templates/coop/participation_requirement_new.html
@@ -30,6 +30,10 @@
     <input type="submit" value="Save" />
   </form>
 
+  <script type="text/javascript">
+      {{ participation_edit_js | safe }}
+  </script>
+
 {% endblock %}
 
 {% block rightbar %}{% endblock %}
